# Metadocs-blog-tutorial-code

./: .gitignore  LICENSE  README.md
LLM-monitoring-for-AWS-Bedrock/: Pipfile  app.py  langchain-bedrock-monitoring.ipynb
LLM-monitoring-with-complexe-chain/: Pipfile  app.py
RAG-agent-multi-vector-store/: Pipfile  app.py
RAG-pipeline-langchain-openai/: Pipfile  app.py
RAG-pipeline-multi-vector-store-langchain-app/: app.py  generated_clean_energy_discourse.txt
agent-powered-chat-app/: app.py
cost-efficient-vector-store-with-lancedb/: Pipfile  app.py
create-complex-webapp-with-langchain-alternative-feature/: app.py
create-complex-webapp-with-langchain-best-practices/: Pipfile  app.py
deploy-llm-sagemaker-endpoint/: Pipfile  deploy-llm-sagemaker.ipynb
domain-specific-CRAG/: app.py  clean_energy_domain_specific.txt  domain_specific_vocabulary.txt
langchain-bedrock-multi-models/: Pipfile  langchain-bedrock-multi-models.ipynb
langchain-glue-catalog-athena-integration/: Pipfile  langchain-glue-catalog-athena-integration.ipynb
langchain-llm-sagemaker-endpoint/: Pipfile  langchain-llm-sagemaker-endpoint.ipynb
langserve-API/: Pipfile  app.py  app2.py  pyproject.toml
langserve-API/app/: server.py
langserve-openai-api/: README.md  pyproject.toml
langserve-openai-api/app/: server.py
safe-chat-rag-with-bedrock-guardrails/: Pipfile  app.py
simple-copilot-style-chat/: Pipfile  app.py
