[tool.poetry]
name = "langserve-api"
version = "0.1.0"
description = ""
authors = ["Metadocs"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
fastapi = ">=0.90.1,<1"
pydantic = "1.10.17"
# langserve = {extras = ["server"], version = "0.2.2"}
# langchain = "0.2.6"
# langchain-core = "0.2.12"
langserve = "^0.2.2"
langchain = "0.2.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
